@@ -1,3 +1,5 @@
+// +build darwin linux windows
+
 package main
 
 import (
@@ -6,6 +8,7 @@ import (
 	"fmt"
 	"os"
 	"syscall"
+	"strconv"
 
 	"mongoshake/collector"
 	"mongoshake/collector/ckpt"
@@ -15,11 +18,11 @@ import (
 	"mongoshake/modules"
 	"mongoshake/oplog"
 	"mongoshake/quorum"
+	"mongoshake/collector/filter"
 
 	"github.com/gugemichael/nimo4go"
 	LOG "github.com/vinllen/log4go"
 	"github.com/vinllen/mgo/bson"
-	"mongoshake/collector/filter"
 )
 
 type Exit struct{ Code int }
@@ -65,10 +68,15 @@ func main() {
 	conf.Options.Version = utils.BRANCH
 
 	nimo.Profiling(int(conf.Options.SystemProfile))
-	nimo.RegisterSignalForProfiling(syscall.SIGUSR2)
-	nimo.RegisterSignalForPrintStack(syscall.SIGUSR1, func(bytes []byte) {
-		LOG.Info(string(bytes))
-	})
+	signalProfile, _ := strconv.Atoi(utils.SIGNALPROFILE)
+	signalStack, _ := strconv.Atoi(utils.SIGNALSTACK)
+	if signalProfile > 0 {
+		nimo.RegisterSignalForProfiling(syscall.Signal(signalProfile)) // syscall.SIGUSR2
+		nimo.RegisterSignalForPrintStack(syscall.Signal(signalStack), func(bytes []byte) { // syscall.SIGUSR1
+			LOG.Info(string(bytes))
+		})
+	}
+
 	utils.Welcome()
 
 	// get exclusive process lock and write pid
